# spi-analyzer

./: CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: ExternalAnalyzerSDK.cmake
src/: SpiAnalyzer.cpp  SpiAnalyzer.h  SpiAnalyzerResults.cpp  SpiAnalyzerResults.h  SpiAnalyzerSettings.cpp  SpiAnalyzerSettings.h  SpiSimulationDataGenerator.cpp  SpiSimulationDataGenerator.h
